[gd_scene load_steps=2 format=3 uid="uid://1d3v22be545x"]

[ext_resource type="Script" path="res://Scripts/Scenes/selecionar_jogo.gd" id="1_yqoph"]

[node name="Selecionar jogo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqoph")

[node name="voltar" type="Button" parent="."]
layout_mode = 2
offset_left = 30.0
offset_top = 24.0
offset_right = 132.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 30
text = "voltar"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -211.0
offset_top = -696.0
offset_right = 211.0
grow_horizontal = 2
grow_vertical = 0

[node name="Texto" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0.0313726, 0, 0, 0.803922)
theme_override_font_sizes/font_size = 40
text = "Seleciona um jogo
"
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/MarginContainer"]
z_as_relative = false
custom_minimum_size = Vector2(100, 100)
layout_direction = 1
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 25
columns = 2

[node name="jogo 1" type="Button" parent="VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "
JOGO 1

"

[node name="jogo 2" type="Button" parent="VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "
JOGO 2

"

[node name="jogo 3" type="Button" parent="VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "
JOGO 3

"

[node name="jogo 4" type="Button" parent="VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "
JOGO 4

"

[node name="jogo 5" type="Button" parent="VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "
JOGO 5

"

[node name="jogo 6" type="Button" parent="VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "
JOGO 6

"

[connection signal="pressed" from="voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/GridContainer/jogo 1" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/GridContainer/jogo 2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/GridContainer/jogo 3" to="." method="_on_jogo_3_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/GridContainer/jogo 4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/GridContainer/jogo 5" to="." method="_on_jogo_5_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/GridContainer/jogo 6" to="." method="_on_jogo_6_pressed"]
